# gds_course

./: .gitignore  pyproject.toml
content/bB/: diy_B.ipynb  lab_B.ipynb
content/bC/: concepts_C.ipynb
content/bC/data/Census_Residential_Data_Pack_2011/Local_Authority_Districts/E08000012/: metadata.xml:Zone.Identifier
content/bC/pollution_data/: EDGARv6.1_BC_2018_10_ENE.txt  EDGARv6.1_BC_2018_11_ENE.txt  EDGARv6.1_BC_2018_12_ENE.txt  EDGARv6.1_BC_2018_1_ENE.txt  EDGARv6.1_BC_2018_2_ENE.txt  EDGARv6.1_BC_2018_3_ENE.txt  EDGARv6.1_BC_2018_4_ENE.txt  EDGARv6.1_BC_2018_5_ENE.txt  EDGARv6.1_BC_2018_6_ENE.txt  EDGARv6.1_BC_2018_7_ENE.txt  EDGARv6.1_BC_2018_8_ENE.txt  EDGARv6.1_BC_2018_9_ENE.txt
content/bD/: concepts_D.ipynb  diy_D.ipynb  lab_D.ipynb
content/bE/: concepts_E.ipynb  diy_E.ipynb  lab_E.ipynb
content/bF/: diy_F.ipynb  lab_F.ipynb
content/bG/: concepts_G.ipynb  diy_G.ipynb  lab_G.ipynb
content/bH/: diy_H.ipynb  lab_H.ipynb
