[tool.poetry]
name = "geographic data science course"
version = "0.1.0"
description = "Dependencies needed for geographic data science course"
authors = ["Tristan New <tristannew@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10.7"
pandas = "^2.1.1"
geopandas = "^0.14.0"
osmnx = "^1.7.0"
contextily = "^1.4.0"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
pysal = "^23.7"
ipykernel = "^6.25.2"
folium = "^0.15.0"
mapclassify = "^2.6.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
